# semverfastapi

./: AGENTS.md  README.md  SCRATCHPAD.md  pyproject.toml  pytest.ini
docs/: ARCHITECTURE.md  REQUIREMENTS.md  TESTING.md
semverfastapi/: __init__.py  app.py  core.py  decorators.py  dependencies.py
tests/: conftest.py  test_app.py  test_core.py  test_decorators.py  test_dependencies.py
